fix database
