# apps/system/api/infrastructure/database/bun/models/member_profile.go
@@ -10,8 +10,8 @@ type MemberProfile struct {
 	bun.BaseModel `bun:"table:member_profiles,alias:mp"`
 
 	MemberID       uuid.UUID `bun:"member_id,pk"`
-	MemberIDNumber string    `bun:"member_id_number,notnull"`
-	Name           string    `bun:"name,notnull"`
+	MemberIDNumber string    `bun:"member_id_number"`
+	DisplayName    string    `bun:"display_name,notnull"`
 	CreatedAt      time.Time `bun:"created_at,notnull,default:current_timestamp"`
 	UpdatedAt      time.Time `bun:"updated_at,notnull,default:current_timestamp"`
 }
